--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   flutter_animated_button: ^2.0.4
   fluttertoast: ^8.2.12
   fl_chart: ^0.71.0
+  path_provider: ^2.1.5
+  permission_handler: ^12.0.0+1
+  bluetooth_classic: ^0.0.3
 
 dev_dependencies:
   flutter_test:
